<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constFyAct"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/off_white"
    tools:context=".ui.main.fyAct">

    <androidx.cardview.widget.CardView
        android:id="@+id/details_main_card"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="8dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="5dp"
        app:cardElevation="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/mainLottie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:elevation="@dimen/space_10dp"
            app:lottie_fileName="pop.json"
            app:lottie_loop="false"
            app:lottie_repeatCount="0" />

        <LinearLayout
            android:id="@+id/frag_fy"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/main_univ_fy"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/ripple_light"
                android:enabled="true"
                android:fontFamily="@font/google_sans_bold"
                android:text="@string/univ"
                android:textColor="@color/blackGrey" />

            <View
                android:id="@+id/act_line"
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@color/blackish"
                android:visibility="visible" />

            <Button
                android:id="@+id/main_area_fy"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/ripple_light"
                android:fontFamily="@font/google_sans_bold"
                android:text="@string/area"
                android:textColor="@color/blackGrey" />

            <View
                android:id="@+id/act_line2"
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@color/blackish"
                android:visibility="visible" />

            <Button
                android:id="@+id/main_clg_fy"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/ripple_light"
                android:fontFamily="@font/google_sans_bold"
                android:text="@string/clg"
                android:textColor="@color/blackGrey" />

        </LinearLayout>

        <View
            android:id="@+id/act_line3"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="60dp"
            android:background="@color/blackish"
            android:visibility="visible" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/univRecFy"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="60dp"
            android:padding="@dimen/padding_5dp"
            android:scrollbars="vertical"
            android:visibility="gone"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/areaRecFy"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="60dp"
            android:padding="@dimen/padding_5dp"
            android:scrollbars="vertical"
            android:visibility="gone"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/hoursRecFy"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="60dp"
            android:padding="@dimen/padding_5dp"
            android:scrollbars="vertical"
            android:visibility="gone"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:minHeight="120dp">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="@dimen/space_10dp"
                android:src="@drawable/ic_plus_24"
                android:visibility="gone"
                app:backgroundTint="@color/off_white"
                app:elevation="@dimen/padding_5dp"
                app:fabCustomSize="36dp"
                app:rippleColor="@color/colorPrimaryLight" />
        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>