<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/off_white"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.FirstHalfFrag">

    <androidx.cardview.widget.CardView
        app:cardBackgroundColor="@color/white"
        android:id="@+id/mainCardFirst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_5dp"
        app:cardCornerRadius="2dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/act_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:focusable="true"
                android:clickable="true"
                android:background="@drawable/ripple_light"
                android:id="@+id/area_act1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="@font/google_sans"
                android:gravity="center"
                android:text="@string/area1"
                android:textColor="@color/blackGrey"
                android:paddingEnd="@dimen/space_10dp"
                android:drawableEnd="@drawable/ic_arrow_down"
                android:textSize="@dimen/text_18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/grey"
                android:visibility="visible" />

            <TextView
                android:focusable="true"
                android:clickable="true"
                android:background="@drawable/ripple_light"
                android:id="@+id/area_act2"
                android:paddingEnd="@dimen/space_10dp"
                android:drawableEnd="@drawable/ic_arrow_down"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="@font/google_sans"
                android:gravity="center"
                android:text="@string/area2"
                android:textColor="@color/blackGrey"
                android:textSize="@dimen/text_18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/grey"
                android:visibility="visible" />

            <TextView
                android:focusable="true"
                android:clickable="true"
                android:background="@drawable/ripple_light"
                android:id="@+id/univ_act"
                android:paddingEnd="@dimen/space_10dp"
                android:drawableEnd="@drawable/ic_arrow_down"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="@font/google_sans"
                android:gravity="center"
                android:text="University/District"
                android:textColor="@color/blackGrey"
                android:textSize="@dimen/text_18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/grey"
                android:visibility="visible" />

            <TextView
                android:focusable="true"
                android:clickable="true"
                android:background="@drawable/ripple_light"
                android:id="@+id/clg_act"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingEnd="@dimen/space_10dp"
                android:drawableEnd="@drawable/ic_arrow_down"
                android:fontFamily="@font/google_sans"
                android:gravity="center"
                android:text="@string/college_work"
                android:textColor="@color/blackGrey"
                android:textSize="@dimen/text_18sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/noActDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/google_sans_bold"
        android:gravity="center"
        android:text="No activities added by PO"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_18sp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/areafyListOne"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/space_3dp"
        android:layout_marginTop="120dp"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/areafyListTwo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/space_3dp"
        android:layout_marginTop="120dp"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/univfyList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/space_3dp"
        android:layout_marginTop="120dp"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/clgfyList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/space_3dp"
        android:layout_marginTop="120dp"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginBottom="@dimen/space_10dp"
        android:paddingStart="@dimen/padding_5dp"
        android:paddingEnd="@dimen/padding_5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            app:rippleColor="@color/colorPrimaryLight"
            app:elevation="4dp"
            app:backgroundTint="@color/white"
            android:src="@drawable/ic_back_32"
            app:fabCustomSize="45dp"
            android:id="@+id/backActBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/space_10dp"
            android:layout_marginBottom="@dimen/padding_5dp"
            android:visibility="visible" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>